--- a/app/src/CandyMachine/CandyMachine.css
+++ b/app/src/CandyMachine/CandyMachine.css
@@ -8,6 +8,7 @@
 .gif-container {
   display: flex;
   flex-direction: column;
+  margin-bottom: 5%;
 }
 
 .gif-grid {
@@ -21,15 +22,95 @@
 
 .gif-grid .gif-item {
   display: flex;
-  flex-direction: column;
-  position: relative;
   justify-self: center;
   align-self: center;
+  max-width: 350px;
+  background-color: rgba(51, 51, 51, 0.63);
+  border-radius: 10px;
+}
+
+
+.gif-info{
+  text-align: start;
+  padding-left: 10px;
+  padding-top: 20px;
+  font-family: 'Audiowide', cursive;
+  color:rgb(144, 144, 144);
+  inline-size: 150px;
+  overflow-wrap: break-word;
+}
+
+
+.gif-info .name {
+  font-size: 1.1rem;
+  font-weight: bold;
+  color:#fff;
+  width: 20vw;
+  max-width: 100px;
+
+}
+.gif-info .vapor{
+  font-size: 0.7rem;
+  font-weight: bold;
+  background:url(https://image.shutterstock.com/image-vector/colorful-techno-backdrop-aesthetics-vaporwave-260nw-1909563445.jpg) repeat-x;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent; 
+  -moz-background-clip: text;
+  -moz-text-fill-color: transparent;
+  -webkit-animation: gradient-animation 2s linear infinite;
+  text-shadow: #67ffff77 0 0 1px;
 }
 
 .gif-item img {
-  width: 100%;
-  height: 200px;
+  width: 60vw;
+  max-width: 300px;
+  height: 400px;
   border-radius: 10px;
-  object-fit: cover;
+}
+
+@media screen and (min-width: 768px) {
+  .gif-grid {
+    grid-template-columns: repeat(2, minmax(300px, 1fr));
+    grid-gap: 3rem;
+  }
+}
+
+
+@media screen and (min-width: 1024px) {
+  .gif-grid {
+    grid-template-columns: repeat(3, minmax(300px, 1fr));
+    grid-gap: 3rem;
+  }
+
+  .gif-grid .gif-item {
+    max-width: 330px;
+  }
+
+  .gif-item img {
+    width: 20vw;
+  }
+
+
+}
+
+/*Desktop*/
+@media screen and (min-width: 1300px) {
+  .gif-grid {
+    grid-template-columns: repeat(3, minmax(300px, 1fr));
+    grid-gap: 3rem;
+  }
+
+  .gif-grid .gif-item {
+    max-width: 400px;
+  }
+
+  .gif-item img {
+    width: 20vw;
+  }
+
+  .gif-info .name {
+    font-size: 1.2rem;
+    max-width: 150px;
+  }
+
 }
